feature: role repository; change: role enum to entity, Arrays.asList to List.of;