@@ -13,8 +13,6 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.hasSize;
@@ -44,7 +42,7 @@ class SearchControllerTest {
         mvc = MockMvcBuilders.standaloneSetup(underTest).build();
         mapper = new ObjectMapper();
 
-        productResponses = new ArrayList<>(Arrays.asList(new ProductResponse(), new ProductResponse(), new ProductResponse()));
+        productResponses = List.of(new ProductResponse(), new ProductResponse(), new ProductResponse());
     }
 
     @Test
